WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75678
Array.prototype.lastIndexOf ignores undefined fromIndex.
https://bugs.webkit.org/show_bug.cgi?id=75678
Summary
Array.prototype.lastIndexOf ignores undefined fromIndex.
Gavin Barraclough
Reported
2012-01-05 17:26:32 PST
array.lastIndexOf(x, undefined) is equivalent to array.lastIndexOf(x, 0), not array.lastIndexOf(x)
Attachments
Fix
(2.69 KB, patch)
2012-01-05 17:29 PST
,
Gavin Barraclough
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-01-05 17:29:24 PST
Created
attachment 121375
[details]
Fix
Gavin Barraclough
Comment 2
2012-01-05 17:37:54 PST
Fixed in
r104258
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug