Array.prototype.lastIndexOf ignores undefined fromIndex. https://bugs.webkit.org/show_bug.cgi?id=75678

Reviewed by Sam Weinig.

Source/JavaScriptCore:

array.lastIndexOf(x, undefined) is equivalent to array.lastIndexOf(x, 0), not array.lastIndexOf(x)

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncLastIndexOf):
    - should check argumnet count, rather than checking agument value for undefined.

LayoutTests:

* ietestcenter/Javascript/15.4.4.15-5-4-expected.txt:
    - check in passing result



Canonical link: https://commits.webkit.org/92470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104258 268f45cc-cd09-0410-ab3c-d52691b4dbfc